MMA-6457 La til noen tester. Endringer etter PR